test: Added tests for decodeBody utility function

--- a/desktop/plugins/tsconfig.json
+++ b/desktop/plugins/tsconfig.json
@@ -17,11 +17,5 @@
     ]
   },
   "include": ["public/", "fb/"],
-  "exclude": [
-    "**/lib/",
-    "**/dist/",
-    "**/node_modules/",
-    "**/__tests__/",
-    "**/__test__/"
-  ]
+  "exclude": ["**/lib/", "**/dist/", "**/node_modules/", "**/__test__/"]
 }
